# air-raid-alerts-analysis

./: .gitignore  LICENSE  README.md  cursor-chat-export.jsonl  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml  features.yaml
docs/: DATA.md  REQUIREMENTS.md
docs/chat-history/: README.md  my-main-goal-chat.md
scripts/: export_chat_history.py  process_region.py  update_raw_data.py
src/air_raid_alerts/: __init__.py  cli.py  config.py  paths.py  regions.py  schema.py  time_intervals.py
src/air_raid_alerts/evaluation/: __init__.py  metrics.py  splits.py
src/air_raid_alerts/features/: __init__.py  build.py  lags.py
src/air_raid_alerts/ingest/: __init__.py  fetch_vadimkin.py
src/air_raid_alerts/models/: __init__.py  baselines.py  calibration.py  exposure.py  persist.py  predict.py  train.py
src/air_raid_alerts/transform/: __init__.py  clean.py  intervals.py  panel.py  pipeline.py  qc.py
tests/: conftest.py  helpers.py  test_baselines.py  test_baselines_integration.py  test_calibration.py  test_clean.py  test_config.py  test_export_chat_history.py  test_exposure_model.py  test_features.py  test_fetch_vadimkin.py  test_intervals.py  test_local_data_integration.py  test_metrics.py  test_panel.py  test_paths.py  test_pipeline.py  test_pipeline_integration.py  test_predict.py  test_qc.py  test_regions.py  test_splits.py  test_time_intervals.py
tests/fixtures/: manifest.json  sample_vadimkin.csv
