[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "air-raid-alerts"
version = "0.1.0"
description = "Time series analysis and forecasting of Ukrainian air raid alerts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "lightgbm>=4.3,<5",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15,<22"]
dev = [
    "pytest>=8,<9",
    "ruff>=0.4,<1",
    "ipython>=8,<10",
    "jupyter>=1.0,<2",
]

[project.scripts]
air-alerts = "air_raid_alerts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
